--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,16 @@
 server.port=8081
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.max-threads=800
+spring.profiles.active=prod
 spring.devtools.restart.exclude=static/**,public/**,tags/**,templates/**
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
-###########  server end ##########
 
+##########   log start    ########################
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+##########   log end    ########################
 
 #########    datasource start  ##################
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/uquiz?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
