--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.max-threads=800
-spring.profiles.active=prod
+spring.profiles.active=dev
 spring.devtools.restart.exclude=static/**,public/**,tags/**,templates/**
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
