swagger修改,微信验证服务器修改

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,23 +1,21 @@
-logging.path=/u01/uquiz/uquiz/log
-server.port=14141
-
+server.port=8081
 #########   redis start     ############################
-leaf.redis.project.session.url=redis://127.0.0.1:6379:xiamingmat/5
-leaf.redis.project.string.url=redis://127.0.0.1:6379:xiamingmat/6
-leaf.redis.project.hash.url=redis://127.0.0.1:6379:xiamingmat/7
+leaf.redis.project.session.url=redis://127.0.0.1:6379:/5
+leaf.redis.project.string.url=redis://127.0.0.1:6379:/6
+leaf.redis.project.hash.url=redis://127.0.0.1:6379:/7
 #########   redis end     ############################
 
 ############### 文件配置 start ###############
 file.config.use-xsendfile=false
-file.config.main-path=/u01/uquiz/uquiz/file
-file.config.thumb-path=/u01/uquiz/uquiz/file
+file.config.main-path=/Users/augustus/asiawork/a
+file.config.thumb-path=/Users/augustus/asiawork/a
 ############### 文件配置 end ###############
 
 ############# 微信配置  start ###############
-leaf.weixin.token=uquiz
-leaf.weixin.aes-key=5KqSy7r2hjAuTVrP9T9yv33RhRWQTiABIDitZOMWaFq
-leaf.weixin.app-id=wxee0e2a8157f021ce
-leaf.weixin.app-secret=8d4e516c1467669e66b58396903ab65b
+leaf.weixin.token=ttgoing
+leaf.weixin.aes-key=c0e9fcff59ecc3b8b92939a1a2724a44012qCDkab23
+leaf.weixin.app-id=wx5a667e34d8fbfee6
+leaf.weixin.app-secret=459834c281a958fb5bdf18b20fe2561b
 ############# 微信配置  end ###############
 
 ############# system config start######################
