--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ###########  server start ##########
-server.port=8081
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.max-threads=800
-spring.profiles.active=dev
+spring.profiles.active=prod
 spring.devtools.restart.exclude=static/**,public/**,tags/**,templates/**
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
@@ -21,22 +20,3 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #########    datasource end  ##################
-
-#########   redis start     ############################
-leaf.redis.project.session.url=redis://127.0.0.1:6379:/5
-leaf.redis.project.string.url=redis://127.0.0.1:6379:/6
-leaf.redis.project.hash.url=redis://127.0.0.1:6379:/7
-#########   redis end     ############################
-
-############### 文件配置 start ###############
-file.config.use-xsendfile=false
-file.config.main-path=/Users/augustus/asiawork/a
-file.config.thumb-path=/Users/augustus/asiawork/a
-############### 文件配置 end ###############
-
-############# 微信配置  start ###############
-leaf.weixin.token=ttgoing
-leaf.weixin.aes-key=c0e9fcff59ecc3b8b92939a1a2724a44012qCDkab23
-leaf.weixin.app-id=wx5a667e34d8fbfee6
-leaf.weixin.app-secret=459834c281a958fb5bdf18b20fe2561b
-############# 微信配置  end ###############
