--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,7 +21,7 @@ leaf.weixin.app-secret=8d4e516c1467669e66b58396903ab65b
 ############# 微信配置  end ###############
 
 ############# system config start######################
-system.dev-mode=false
+system.dev-mode=true
 system.base-url=http://api.studypointshare.com
 system.front-end-url=http://www.studypointshare.com
 system.mobile-end-url=http://m.studypointshare.com
