--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.datasource.url=jdbc:mysql://116.62.45.85:3306/uquiz?useUnicode=true&chara
 spring.datasource.username=uquiz
 spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=3600000
+spring.datasource.validation-query=SELECT 1
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #########    datasource end  ##################
