测试音频转码:ffmpeg arm -> mp3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,19 @@ spring.datasource.validation-query=SELECT 1
 
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #########    datasource end  ##################
+
+
+############## kaptcha配置  start    ########################
+uquiz.kaptcha.border=no
+uquiz.kaptcha.session-key=KAPTCHA_SESSION_KEY
+uquiz.kaptcha.font-color=221,90,67
+uquiz.kaptcha.font-size=30
+uquiz.kaptcha.obscurificator=com.google.code.kaptcha.impl.WaterRipple
+uquiz.kaptcha.noise=com.google.code.kaptcha.impl.NoNoise
+uquiz.kaptcha.width=150
+uquiz.kaptcha.height=50
+uquiz.kaptcha.char-length=5
+uquiz.kaptcha.char-space=5
+uquiz.kaptcha.from=247,247,247
+uquiz.kaptcha.to=247,247,247
+############## kaptcha配置  end    ########################
