--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,13 @@
             <version>2.3.2</version>
         </dependency>
 
+        <!-- kaptcha  -->
+        <dependency>
+            <groupId>com.google.code.kaptcha</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
         <!-- swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
