微信服务器上传音频后下载并转码接口

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,8 @@ leaf.redis.project.hash.url=redis://127.0.0.1:6379:/7
 file.config.use-xsendfile=false
 file.config.main-path=/Users/augustus/asiawork/a
 file.config.thumb-path=/Users/augustus/asiawork/a
+file.config.amr-path=/u01/uquiz/uquiz/file/amr/
+file.config.mp3-path=/u01/uquiz/uquiz/static/studyweb/mp3/
 ############### 文件配置 end ###############
 
 ############# 微信配置  start ###############
@@ -23,4 +25,5 @@ system.dev-mode=false
 system.base-url=http://api.studypointshare.com
 system.front-end-url=http://www.studypointshare.com
 system.mobile-end-url=http://m.studypointshare.com
+system.voice-url=http://m.studypointshare.com/mp3
 ############# system config start######################
