课程内容增加时长

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ###########  server start ##########
 server.tomcat.uri-encoding=UTF-8
 server.tomcat.max-threads=800
+multipart.max-file-size=5Mb
 spring.profiles.active=prod
 spring.devtools.restart.exclude=static/**,public/**,tags/**,templates/**
 spring.thymeleaf.cache=false
