--- a/src/main/resources/mime-types.properties
+++ b/src/main/resources/mime-types.properties
@@ -227,7 +227,7 @@ moov=video/quicktime
 mov=video/quicktime
 movie=video/x-sgi-movie
 mp2=audio/mpeg
-mp3=audio/mpeg3
+mp3=audio/mp3
 mp4=video/mp4
 mpa=audio/mpeg
 mpc=application/x-project
